# pacman-g2

./: .gitignore  CMakeLists.txt  autogen.sh  cmake_config.h
cmake_modules/: UseAsciidoc.cmake
doc/: .gitignore  CMakeLists.txt  po4a.cfg
lib/libpacman/: CMakeLists.txt  Doxyfile  pacman.pc.in  server.c
lib/libpacman/po/: CMakeLists.txt
src/pacman-g2/: CMakeLists.txt  pacman-g2.c
